sumo/tests/sumo/output/e2/errors/pos_too_high/errors.sumo
Error: The given position (=1e+06) for detector '4/1to3/1' does not lie on the given lane '4/1to3/1_0' with length 400 (0 <= pos < lane->getLength() is required)
Quitting (on error).
